--- a/studycafe/package.json
+++ b/studycafe/package.json
@@ -10,7 +10,10 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-native": "^0.64.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -36,5 +39,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.10",
+    "@types/styled-components-react-native": "^5.1.1",
+    "babel-plugin-styled-components": "^1.13.1"
   }
 }
