--- a/login/app/package.json
+++ b/login/app/package.json
@@ -7,10 +7,14 @@
     "Webgrus_team_35": "www.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "mongoose": "^5.13.2"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.13.2",
+    "nodemon": "^2.0.12"
   },
   "devDependencies": {},
   "scripts": {
@@ -18,7 +22,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
-    "type": "git",  
+    "type": "git",
     "url": "git+https://github.com/domo7304/Webgrus_team_35.git"
   },
   "keywords": [],
