cors 설정, concurrently 사용하여 client, server 동시에 시작되도록

--- a/backset/package.json
+++ b/backset/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "concurrently \"npm run start\" \"npm run start --prefix client\""
   },
   "repository": {
     "type": "git",
@@ -15,18 +16,19 @@
   "license": "ISC",
   "homepage": "https://github.com/sortinghyeok/several_for_web.git#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "concurrently": "^6.2.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
-    "mongoose": "^5.13.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.0.1",
+    "mongoose": "^5.13.5",
     "multer": "^1.4.2",
     "nodemon": "^2.0.12",
-    "bcrypt": "^5.0.1",
-    "cookie-parser": "^1.4.5",
-    "jsonwebtoken": "^8.5.1",
+    "npm-check-updates": "^11.8.3",
     "save": "^2.4.0",
-    "concurrently": "^6.2.0",
-    "mongodb": "^3.6.10",
     "url-search-params-polyfill": "^8.1.1"
   },
   "bugs": {
