--- a/backset/package.json
+++ b/backset/package.json
@@ -17,21 +17,17 @@
   "homepage": "https://github.com/sortinghyeok/several_for_web.git#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "ckeditor4-react": "^1.4.2",
-    "concurrently": "^6.2.0",
+    "ckeditor4-react": "^2.0.0",
+    "concurrently": "^6.2.1",
     "cookie-parser": "^1.4.5",
-    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-session": "^1.17.2",
-    "http-proxy-middleware": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.0.1",
+    "mongodb": "^4.1.0",
     "mongoose": "^5.13.5",
     "multer": "^1.4.2",
     "nodemon": "^2.0.12",
     "npm-check-updates": "^11.8.3",
-    "save": "^2.4.0",
-    "url-search-params-polyfill": "^8.1.1"
+    "save": "^2.4.0"
   },
   "bugs": {
     "url": "https://github.com/sortinghyeok/several_for_web/issues"
