로그인 및 json토큰 발급까지 확인, 로그인 실패에 대한 안내 메시지 작성 필요

--- a/backset/package.json
+++ b/backset/package.json
@@ -27,7 +27,8 @@
     "multer": "^1.4.3",
     "nodemon": "^2.0.12",
     "npm-check-updates": "^11.8.3",
-    "save": "^2.4.0"
+    "save": "^2.4.0",
+    "validator": "^13.6.0"
   },
   "bugs": {
     "url": "https://github.com/sortinghyeok/several_for_web/issues"
